--- a/css/variables.css
+++ b/css/variables.css
@@ -7,7 +7,7 @@
 	--color-background: #E9EAEC;
 
 	--font-primary: 'Open Sans', sans-serif;
-	--font-secondary: "Arial Rounded MT Bold";
+	--font-secondary: "Arial Rounded MT Bold", sans-serif;
 
 	--font-weight-regular: 400;
 	--font-weight-medium: 500;
