--- a/css/variables.css
+++ b/css/variables.css
@@ -16,6 +16,7 @@
 	--font-size-small: 0.625rem;
 	--font-size-medium: 0.938rem;
 	--font-size-large: 1.875rem;
+	--font-size-header: 1.25rem;
 
 	--font-opacity-half: 0.42;
 }
