Add font size huge to variable

--- a/css/variables.css
+++ b/css/variables.css
@@ -17,6 +17,7 @@
 	--font-size-medium: 0.938rem;
 	--font-size-large: 1.875rem;
 	--font-size-header: 1.25rem;
+	--font-size-huge: 3.125rem;
 
 	--font-opacity-half: 0.42;
 }
