--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 .window-container {
 	display: flex;
-	flex-flow: column nowrap;
+	flex-direction: column;
 	width: 100vw;
 	height: 100vh;
 	background-color: var(--color-background);
@@ -27,7 +27,6 @@ header {
 
 .header-button {
 	font-size: var(--font-size-header);
-
 }
 
 .header-logo {
@@ -36,11 +35,18 @@ header {
 	position: absolute;
 	left: 1rem;
 	top: -1rem;
+	cursor: pointer;
 }
 .header-logo img {
 	height: 7.75rem;
 	width: 7.75rem;
 } 
+
+.header-button:hover {
+	cursor: pointer;
+	transform: scale(105%);
+	transition: all 200ms ease;
+}
 
 
 .footer {
