--- a/css/pages/kontakt.css
+++ b/css/pages/kontakt.css
@@ -1,4 +1,66 @@
 
 .kontakt {
 	display: none;
+	align-items: center;
+	flex-direction: column;
+	gap: 4rem;
+}
+
+.kontakt-text {
+	display: flex;
+	flex-direction: column;
+	font-family: var(--font-primary);
+	margin-top: 8rem;
+	gap: 2rem;
+}
+
+.kontakt-title {
+	font-size: var(--font-size-large);
+	font-weight: 500;
+}
+
+.grid-skjema {
+	display: grid;
+	grid-template-columns: repeat(10, 1fr);
+	grid-template-rows: repeat(6, 1fr);
+	gap: 0.81rem;
+	width: 45rem;
+	height: 21rem;
+}
+
+.kontakt-skjema_kommentar {
+	grid-row: 3 / 7;
+	grid-column: 1 / -1;
+}
+
+.kontakt-skjema_mail {
+	grid-row: 2 / 3;
+	grid-column: 1 / -1;
+}
+
+.kontakt-skjema_telefon {
+	grid-row: 1 / 2;
+	grid-column: 7 / 11;
+}
+
+.kontakt-skjema_navn {
+	grid-row: 1 / 2;
+	grid-column: 1 / 7;
+}
+
+.kontakt-skjema_felt {
+	border-radius: 0;
+	border: 1px solid black;
+	font-family: var(--font-primary);
+	font-weight: var(--font-weight-regular);
+	font-size: var(--font-size-medium);
+	padding-left: 0.5rem;
+	padding: 0.3rem;
+}
+
+.kontakt-skjema_submit {
+	margin-top: 0.81rem;
+	border: 1px solid black;
+	background-color: white;
+	padding: 0.5rem 1rem;
 }
