--- a/css/pages/kontakt.css
+++ b/css/pages/kontakt.css
@@ -63,4 +63,11 @@
 	border: 1px solid black;
 	background-color: white;
 	padding: 0.5rem 1rem;
+	font-family: var(--font-primary);
+	font-weight: var(--font-weight-regular);
+	font-size: var(--font-size-medium);
+}
+
+.kontakt-skjema_submit:hover {
+	background-color: var(--color-secondary);
 }
