--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+body {
+	background-color: var(--color-background);
+}
 
 .window-container {
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
 	height: 100vh;
-	background-color: var(--color-background);
 }
 
 header {
