--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -1,4 +1,81 @@
 
 .discer {
 	display: none;
+	flex-direction: row;
 }
+
+.sidebar {
+	display: flex;
+	flex-direction: column;
+	width: 13rem;
+	margin-top: 13rem;
+	margin-left: 1rem;
+	gap: 2.5rem;
+}
+
+.filter-buttons {
+	display: flex;
+	flex-direction: column;
+	font-family: var(--font-primary);
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	gap: 1.88rem;
+	padding: 0.81rem 0rem;
+}
+
+.filter-buttons:hover {
+	background-color: white;
+	transition: all 100ms;
+}
+
+.filter-buttons-title {
+	font-weight: var(--font-weight-medium);
+	font-size: var(--font-size-header);
+	cursor: pointer;
+}
+.filter-buttons-title::after {
+	content: "";
+	display: inline-block;
+	width: 1.2rem;
+	height: 0.75rem;
+	background-image: url(/assets/arrow.svg);
+	background-size: contain;
+}
+
+.filter-checkbox_text {
+	font-weight: var(--font-weight-regular);
+	font-size: var(--font-size-medium);
+	display: flex;
+	justify-content: space-between;
+}
+
+.filter-checkbox_text::after {
+	content: "";
+	display: inline-block;
+	border: 1px solid black;
+	width: 1.375rem;
+	height: 1.313rem;
+	border-radius: 0.375rem;
+}
+
+.checkbox-label:hover .filter-checkbox_text::after {	
+	background-color: var(--color-secondary);
+}
+
+.filter-checkbox_input:checked + .filter-checkbox_text::after {	
+	background-color: var(--color-primary);
+}
+.merke-checkbox_label {
+	display: none;
+	cursor: pointer;
+}
+
+.type-checkbox_label {
+	display: none;
+	cursor: pointer;
+}
+
+.sidebar-filter_visible {
+	display: block;
+}
+
