--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,2 +1,8 @@
 
+/* Open sans 400, 500 and 600 */
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap');
+
+/* Nunito 700 */
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap');
