--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
 	width: 100vw;
 }
 
+/* header */
+
 header {
 	display: flex;
 	flex-flow: row nowrap;
@@ -25,9 +27,6 @@ header {
 	gap: 7.12rem;
 	padding: 0.81rem 9.43rem;
 	border-bottom: 1px solid black;
-}
-
-.nav-button {
 	font-size: var(--font-size-header);
 }
 
@@ -50,15 +49,46 @@ header {
 	transition: all 200ms ease;
 }
 
+/* footer */
 
-.footer {
+.footer-container {
 	display: flex;
-	flex-direction: column;
 	margin-top: 0.93rem;
 	width: 100%;
 	height: 30rem;
 	background-color: var(--color-primary);
+	padding: 2.25rem 1.94rem;
+}
 
+.footer-content {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	gap: 7.44rem
+}
+
+.footer-content_text {
+	display: flex;
+	flex-direction: row;
+	font-size: var(--font-size-medium);
+	font-family: 'Nunito', sans-serif;
+	color: #FFF;
+	gap: 2.31rem;
+	justify-content: flex-end;
+	margin-right: 13rem;
+}
+
+.footer-nav {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	text-align: left;
+}
+
+.foot-contact-info {
+	display: flex;
+	flex-direction: column;
 }
 
 .footer-websitename {
@@ -67,6 +97,8 @@ header {
 	width: 60rem;
 	margin: auto;
 }
+
+/* extra classes for functionality */
 
 .visible {
 	display: flex;
