--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -128,10 +128,42 @@
 }
 
 .disc {
-	width: 17rem;
-	height: 16rem;
-	background-color: aquamarine;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	width: 17rem;
+	height: fit-content;
+	background-color: #FFF;
 
+}
+
+.disc:hover {
+	transform: scale(105%);
+	transition: all 200ms ease;
+}
+.disc img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+.disc-img {
+	width: 100%;
+}
+
+.disc-info {
+	text-align: center;
+	font-family: var(--font-primary);
+}
+
+.disc-tall {
+	word-spacing: 0.65rem;
+	font-weight: var(--font-weight-semibold);
+}
+.disc-navn {
+	font-size: var(--font-size-medium);
+}
+.disc-merke {
+	font-size: var(--font-size-small);
+	opacity: var(--font-opacity-half);
 }
