--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header {
 /* footer */
 
 .footer-container {
-	display: flex;
+	display: none;
 	margin-top: 0.93rem;
 	width: 100%;
 	height: 30rem;
