--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -120,8 +120,9 @@
 
 .grid-discer {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	height: fit-content;
+	width: 80%;
 	gap: 0.93rem;
 	margin-top: 9rem;
 	margin-left: 1.37rem;
