--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -29,15 +29,20 @@
 }
 
 .filter-buttons-title {
+	position: relative;
 	font-weight: var(--font-weight-medium);
 	font-size: var(--font-size-header);
 	cursor: pointer;
 }
 .filter-buttons-title::after {
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateX(-50%);
 	content: "";
 	display: inline-block;
-	width: 1.2rem;
-	height: 0.75rem;
+	width: 1rem;
+	height: 0.5rem;
 	background-image: url(/assets/arrow.svg);
 	background-size: contain;
 }
