--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -1,8 +1,13 @@
+/* Page */
+
 
 .discer {
 	display: none;
 	flex-direction: row;
+	position: relative;
 }
+
+/* Sidebar filter */
 
 .sidebar {
 	display: flex;
@@ -80,6 +85,8 @@
 	display: block;
 }
 
+/* the discs */
+
 .grid-discer {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -129,4 +136,74 @@
 .disc-merke {
 	font-size: var(--font-size-small);
 	opacity: var(--font-opacity-half);
+}
+
+/* popup / disc page */
+
+
+.disc-popup {
+	position: fixed;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	width: 70vw;
+	height: 80vh;
+	background-color: #FFF;
+	border-radius: 2rem;
+	border: 1px solid black;
+	gap: 2rem;
+}
+
+.disc-popup-title {
+	display: flex;
+	flex-direction: row;
+	width: 90%;
+	height: 60%;
+	gap: 3rem;
+}
+
+.disc-popup-img {
+	width: 25rem;
+	height: 100%;
+}
+
+.disc-popup-title-text {
+	display: flex;
+	flex-direction: column;
+	width: 20rem;
+	height: 20rem;
+	gap: 3rem;
+	font-family: var(--font-primary);
+	margin-top: 4rem;
+}
+
+.disc-popup-title_name {
+	font-weight: var(--font-weight-semibold);
+	font-size: var(--font-size-huge);
+}
+
+.disc-popup-title_number + .disc-popup-title_brand {
+	font-weight: var(--font-weight-medium);
+	font-size: var(--font-size-header);
+}
+
+.disc-popup-description {
+	width: 70%;
+	height: 10rem;
+	font-family: var(--font-primary);
+}
+
+.disc-popup-description_title {
+	font-weight: var(--font-weight-semibold);
+	font-size: var(--font-size-header);
+	margin-bottom: 2rem;
+}
+
+.disc-popup-description_description {
+	font-weight: var(--font-weight-regular);
+	font-size: var(--font-size-medium);
 }
