--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -110,6 +110,7 @@
 .disc:hover {
 	transform: scale(105%);
 	transition: all 200ms ease;
+	cursor: pointer;
 }
 .disc img {
 	width: 100%;
@@ -206,4 +207,21 @@
 .disc-popup-description_description {
 	font-weight: var(--font-weight-regular);
 	font-size: var(--font-size-medium);
+}
+
+.button-popup-close {
+	position: absolute;
+	right: 1rem;
+	top: 1rem;
+	font-size: var(--font-size-header);
+	font-weight: var(--font-weight-regular);
+	font-family: var(--font-primary);
+	padding: 0.5rem;
+	width: fit-content;
+	height: fit-content;
+	cursor: pointer;
+}
+
+.button-popup-close:hover {
+	border: 1px solid var(--color-primary);
 }
