Fixed a problem with the footer that made it popup

--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -90,7 +90,7 @@
 .grid-discer {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-	height: fit-content;
+	min-height: calc(100vh - 9rem);
 	width: 80%;
 	gap: 0.93rem;
 	margin-top: 9rem;
