Add padding to nav buttons so the hitbox is bigger

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ header {
 	width: 7.75rem;
 } 
 
+.nav-button {
+	padding: 1rem;
+}
 .nav-button:hover {
 	cursor: pointer;
 	transform: scale(105%);
