--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -169,66 +169,66 @@
 .disc-popup {
 	position: fixed;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	flex-direction: row;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 1;
-	width: 70vw;
-	height: 80vh;
+	width: fit-content;
+	height: 80%;
 	background-color: #FFF;
-	border-radius: 2rem;
+	border-radius: 1.25rem;
 	border: 1px solid black;
-	gap: 2rem;
+	gap: 3rem;
+	padding: 0 3.5rem 0 3.5rem;
 }
 
-.disc-popup-title {
+.disc-popup-content {
 	display: flex;
-	flex-direction: row;
-	width: 90%;
-	height: 60%;
-	gap: 3rem;
+	flex-direction: column;
+	width: fit-content;
+	height: fit-content;
+	margin-top: 15%;
 }
 
 .disc-popup-img {
-	width: 25rem;
-	height: 100%;
+	width: 30rem;
+	height: 30rem;
+	margin-top: 10%;
 }
 
-.disc-popup-title-text {
+.disc-popup-text {
 	display: flex;
 	flex-direction: column;
 	width: 20rem;
 	height: 20rem;
-	gap: 3rem;
 	font-family: var(--font-primary);
-	margin-top: 4rem;
 }
 
-.disc-popup-title_name {
+.disc-popup-text_name {
+	border-bottom: 1px solid black;
 	font-weight: var(--font-weight-semibold);
 	font-size: var(--font-size-huge);
+	padding: 1rem 0 1rem 0;
 }
 
-.disc-popup-title_number + .disc-popup-title_brand {
+.disc-popup-text_number, .disc-popup-text_brand {
+	display: flex;
+	justify-content: space-between;
 	font-weight: var(--font-weight-medium);
 	font-size: var(--font-size-header);
+	border-bottom: 1px solid black;
+	padding: 1rem 0 1rem 0;
 }
 
 .disc-popup-description {
-	width: 70%;
-	height: 10rem;
+	width: 100%;
+	height: fit-content;
 	font-family: var(--font-primary);
+	padding: 1rem 0 1rem 0;
 }
 
-.disc-popup-description_title {
-	font-weight: var(--font-weight-semibold);
-	font-size: var(--font-size-header);
-	margin-bottom: 2rem;
-}
-
-.disc-popup-description_description {
+.disc-popup-description {
 	font-weight: var(--font-weight-regular);
 	font-size: var(--font-size-medium);
 }
