--- a/css/pages/discer.css
+++ b/css/pages/discer.css
@@ -117,8 +117,8 @@
 	min-height: calc(100vh - 9rem);
 	width: 80%;
 	gap: 0.93rem;
-	margin-top: 9rem;
-	margin-left: 1.37rem;
+	margin: 9rem 0 0.93rem 1.37rem;
+	
 }
 
 .disc {
